fixed dropdown IE issues, and flickering when panning and dropdown due 'height=100%' inline style on maps

--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,13 @@
     body { margin:0; padding:0; }
-   /* #map { position: absolute; top:142px; height: 100%; bottom:100px; right:0; left:0; }*/
+    
+    body, html {height: 100%;}
+    #map1 { position: absolute; top:186px; height: calc(100% - 186px); bottom:200px; left:0; }
+        #map2 { position: absolute; top:186px; height: calc(100% - 186px); bottom:200px; right:0; }
       
         #basemaps-left-wrapper {
-    position: absolute;
+    position: relative;
     top: 10px;
+    width: 110px;
     left: 50px;
     z-index: 4000;
     background: white;
@@ -11,8 +15,9 @@
   }
       
               #basemaps-right-wrapper {
-    position: absolute;
+    position: relative;
     top: 10px;
+    width: 110px;
     left: 50px;
     z-index: 4000;
     background: white;
@@ -22,21 +27,38 @@
   #basemaps {
     margin-bottom: 5px;
   }
-      
-  @media (max-width: 781px) { 
-    #basemaps-right-wrapper {
-        
+
+@media (max-width: 768px) {
+    #map1, #map2 {
+        top: 50px;
+        height: calc(100% - 50px);
+    }
+}
+  
+  @media (max-width: 1024px) and (min-width: 769px) { 
+    #map1, #map2 {
+      top: 165px;
+      height: calc(100% - 165px);
     }
   }
   
+  
     @media (max-width: 400px) { 
-    #basemaps-right-wrapper {
-     /*   bottom: 100px;
-        top: auto;*/
-    }
+        #basemaps-left-wrapper, #basemaps-right-wrapper { 
+        position: absolute;
+        top: auto;
+        left: 15px;
+        bottom: 25px;                            
+        }
     
-    .leaflet-top.leaflet-right {
-        top:  auto;
-        bottom:  70px;
-    }
-  }
+     #basemapsLeft, #basemapsRight{ 
+        position: relative;                      
+        }
+    
+   /*    .leaflet-top.leaflet-right {
+            top:  auto;
+            bottom:  70px;
+       }*/
+   }
+    
+  
